--- a/Lab3/app/src/main/res/layout/activity_new_contact.xml
+++ b/Lab3/app/src/main/res/layout/activity_new_contact.xml
@@ -15,8 +15,8 @@
             android:ems="10"
             android:id="@+id/nameInput"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="38dp"
-            android:layout_marginStart="38dp" android:layout_marginTop="258dp"
-            app:layout_constraintTop_toTopOf="parent" android:hint="Nombre"/>
+            android:layout_marginStart="38dp"
+            android:hint="Nombre" android:layout_marginTop="55dp" app:layout_constraintTop_toBottomOf="@+id/idInput"/>
     <EditText
             android:layout_width="316dp"
             android:layout_height="wrap_content"
@@ -52,4 +52,14 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="38dp"
             android:layout_marginStart="38dp" android:layout_marginTop="44dp"
             app:layout_constraintTop_toBottomOf="@+id/numInput" android:hint="Correo"/>
+    <EditText
+            android:layout_width="317dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/idInput"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="38dp"
+            android:layout_marginStart="38dp" android:layout_marginTop="158dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="55dp"
+            app:layout_constraintBottom_toTopOf="@+id/nameInput" android:hint="Id"/>
 </android.support.constraint.ConstraintLayout>
