--- a/Lab3/app/src/main/res/layout/activity_contact_view.xml
+++ b/Lab3/app/src/main/res/layout/activity_contact_view.xml
@@ -36,4 +36,11 @@
             android:layout_marginStart="161dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="133dp" android:layout_marginTop="92dp"
             app:layout_constraintTop_toBottomOf="@+id/mailText"/>
+    <Button
+            android:text="Editar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="161dp"
+            android:layout_marginStart="161dp" android:layout_marginTop="41dp"
+            app:layout_constraintTop_toBottomOf="@+id/buttonBack"/>
 </android.support.constraint.ConstraintLayout>
